--- a/res/drawable/bg_notification_button.xml
+++ b/res/drawable/bg_notification_button.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true"><shape android:shape="rectangle">
-            <solid android:color="@color/color_notification_pressed" />
-        </shape></item>
-    <item><color android:color="@null" />
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#ff555555" />
+        </shape>
+    </item>
+    <item>
+        <color android:color="@null" />
     </item>
 
 </selector>
