--- a/res/drawable/bg_widget_button.xml
+++ b/res/drawable/bg_widget_button.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true"><shape android:shape="rectangle">
-            <solid android:color="@color/color_widget_pressed" />
-
-            <stroke android:width="1dp" android:color="@color/color_widget_pressed_border" />
-        </shape></item>
-    <item><color android:color="@null" />
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#80ffffff" />
+            <stroke android:width="1dp" android:color="#ffffffff" />
+        </shape>
+    </item>
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/color_transparent" />
+            <stroke android:width="1dp" android:color="#ffffffff" />
+        </shape>
+    </item>
+    <item>
+        <color android:color="@null" />
     </item>
 
 </selector>
