--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,18 +3,21 @@
 
     <!--
          Base application theme, dependent on API level. This theme is replaced 
-		by AppBaseTheme from res/values-vXX/styles.xml on newer devices.    -->
+		by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+    -->
     <style name="AppBaseTheme" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         <!--
              Theme customizations available in newer API levels can go in res/values-vXX/styles.xml, 
-			while customizations related to backward-compatibility can go here.        -->
+			while customizations related to backward-compatibility can go here.
+        -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!--
              All customizations that are NOT specific to a particular API-level 
-			can go here.        -->
+			can go here.
+        -->
         <!-- <item name="android:soundEffectsEnabled">false</item> -->
     </style>
     
@@ -27,14 +30,4 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="SmallText" parent="@android:style/TextAppearance.Small">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/color_text</item>
-    </style>
-
-    <style name="MediumText" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/color_text</item>
-    </style>
-    
 </resources>
