--- a/res/drawable/bg_notification_button.xml
+++ b/res/drawable/bg_notification_button.xml
@@ -7,6 +7,9 @@
         </shape>
     </item>
     <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/color_transparent" />
+        </shape>
     </item>
 
 </selector>
