--- a/res/drawable/bg_widget_button.xml
+++ b/res/drawable/bg_widget_button.xml
@@ -14,6 +14,9 @@
         </shape>
     </item>
     <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/color_transparent" />
+        </shape>
     </item>
 
 </selector>
