Created several overall layout changes and improvements

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -30,4 +30,13 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="ShadowDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@drawable/ic_dlg_shadow</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
