--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,17 +21,8 @@
         <!-- <item name="android:soundEffectsEnabled">false</item> -->
     </style>
     
-    <style name="TransparentDialog" parent="@android:style/Theme.Dialog">
+    <style name="MenuDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@color/color_transparent</item>
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:backgroundDimEnabled">true</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowNoTitle">true</item>
-    </style>
-
-    <style name="ShadowDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowBackground">@drawable/ic_dlg_shadow</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:backgroundDimEnabled">true</item>
