--- a/res/layout-sw500dp/activity_effects.xml
+++ b/res/layout-sw500dp/activity_effects.xml
@@ -44,6 +44,7 @@
 
     <LinearLayout
         android:id="@+id/panelControls"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
@@ -52,6 +53,7 @@
 
         <LinearLayout
             android:id="@+id/panelEqualizer"
+            android:splitMotionEvents="false"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="32dp"
@@ -74,6 +76,7 @@
 
         <LinearLayout
             android:id="@+id/panelSecondary"
+            android:splitMotionEvents="false"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="32dp"
