--- a/res/layout/activity_file_selection.xml
+++ b/res/layout/activity_file_selection.xml
@@ -54,7 +54,7 @@
         android:id="@+id/panelSecondary"
         android:splitMotionEvents="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:visibility="gone" >
 
