--- a/res/layout/activity_file_selection.xml
+++ b/res/layout/activity_file_selection.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:splitMotionEvents="false"
-    tools:context=".ActivityHost" >
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:splitMotionEvents="false"
+                tools:context=".ActivityHost">
 
     <RelativeLayout
         android:id="@+id/panelControls"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true"
+        android:splitMotionEvents="false">
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnGoBack"
@@ -23,7 +23,7 @@
             android:nextFocusForward="@+id/btnMenu"
             android:nextFocusLeft="@+id/list"
             android:nextFocusRight="@+id/btnMenu"
-            android:nextFocusUp="@+id/list" />
+            android:nextFocusUp="@+id/list"/>
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnMenu"
@@ -35,28 +35,37 @@
             android:nextFocusForward="@+id/list"
             android:nextFocusLeft="@+id/btnGoBack"
             android:nextFocusRight="@+id/list"
-            android:nextFocusUp="@+id/list" />
+            android:nextFocusUp="@+id/list"/>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/lblLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:maxLines="1"
+        android:text="@string/loading"
+        android:visibility="gone"/>
 
     <br.com.carlosrafaelgn.fplay.ui.BgListView
         android:id="@+id/list"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/panelControls"
-        android:nextFocusForward="@+id/btnGoBack" >
+        android:nextFocusForward="@+id/btnGoBack"
+        android:splitMotionEvents="false">
 
-        <requestFocus />
+        <requestFocus/>
     </br.com.carlosrafaelgn.fplay.ui.BgListView>
 
     <RelativeLayout
         android:id="@+id/panelSecondary"
-        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:visibility="gone" >
+        android:splitMotionEvents="false"
+        android:visibility="gone">
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnAdd"
@@ -68,13 +77,13 @@
             android:nextFocusForward="@+id/btnPlay"
             android:nextFocusLeft="@+id/list"
             android:nextFocusRight="@+id/btnPlay"
-            android:nextFocusUp="@+id/list" />
+            android:nextFocusUp="@+id/list"/>
 
         <TextView
             android:id="@+id/sep2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true" />
+            android:singleLine="true"/>
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnPlay"
@@ -86,7 +95,7 @@
             android:nextFocusForward="@+id/btnGoBack"
             android:nextFocusLeft="@+id/btnAdd"
             android:nextFocusRight="@+id/btnGoBack"
-            android:nextFocusUp="@+id/list" />
+            android:nextFocusUp="@+id/list"/>
     </RelativeLayout>
 
 </RelativeLayout>
