Improving UI animations and minor details

--- a/res/layout/activity_browser2.xml
+++ b/res/layout/activity_browser2.xml
@@ -160,8 +160,7 @@
             android:nextFocusLeft="@+id/list"
             android:nextFocusRight="@+id/btnAdd"
             android:nextFocusUp="@+id/list"
-            android:text="@string/player"
-            android:visibility="gone"/>
+            android:text="@string/player"/>
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnAdd"
